// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullPageModal renders correctly when passed children 1`] = `
<div
  data-stylename="modal"
>
  <div
    data-stylename="content"
  >
    <div
      data-stylename="left-sidebar"
    >
      <div
        data-stylename="left-sidebar-fixed"
      >
        <Icon
          data-stylename="arrowDown"
          name="ArrowDown"
        />
      </div>
    </div>
    <div
      data-stylename="center"
    >
      <div>
        First Child
      </div>
      <div>
        Second Child
      </div>
    </div>
    <div
      data-stylename="right-sidebar"
    >
      <div
        data-stylename="right-sidebar-inner"
      >
        <CloseButton
          onClose={[Function]}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FullPageModal renders correctly with a single component 1`] = `
<div
  data-stylename="modal"
>
  <div
    data-stylename="content"
  >
    <div
      data-stylename="left-sidebar"
    >
      <div
        data-stylename="left-sidebar-fixed"
      >
        <Icon
          data-stylename="arrowDown"
          name="ArrowDown"
        />
      </div>
    </div>
    <div
      data-stylename="center"
    >
      <div>
        The Content
      </div>
    </div>
    <div
      data-stylename="right-sidebar"
    >
      <div
        data-stylename="right-sidebar-inner"
      >
        <CloseButton
          onClose={[Function]}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FullPageModal renders correctly with multiple tabs 1`] = `
<div
  data-stylename="modal"
>
  <div
    data-stylename="content"
  >
    <div
      data-stylename="left-sidebar"
    >
      <div
        data-stylename="left-sidebar-fixed border"
      >
        <NavLink
          data-stylename="nav-link"
          exact={true}
          key="/settings"
          replace={true}
          to="/settings"
        >
          Account
        </NavLink>
        <NavLink
          data-stylename="nav-link"
          exact={true}
          key="/settings/groups"
          replace={true}
          to="/settings/groups"
        >
          Groups
        </NavLink>
        <Icon
          data-stylename="arrowDown"
          name="ArrowDown"
        />
      </div>
    </div>
    <div
      data-stylename="center narrow"
    >
      <Route
        exact={true}
        key="/settings"
        path="/settings"
        render={[Function]}
      />
      <Route
        exact={true}
        key="/settings/groups"
        path="/settings/groups"
        render={[Function]}
      />
    </div>
    <div
      data-stylename="right-sidebar"
    >
      <div
        data-stylename="right-sidebar-inner"
      >
        <CloseButton
          onClose={[Function]}
        />
      </div>
    </div>
  </div>
</div>
`;
